[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/players/duckling/duckling_animator.gd" type="Script" id=1]
[ext_resource path="res://assets/images/duckling_swim.png" type="Texture" id=2]
[ext_resource path="res://assets/images/duckling_standing.png" type="Texture" id=3]
[ext_resource path="res://assets/images/duckling_jump_rise.png" type="Texture" id=4]
[ext_resource path="res://assets/images/duckling_walking.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "JumpFall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("JumpFall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "JumpRise"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("JumpRise:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Rest"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Swim"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Swim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="DucklingAnimator" type="Node2D"]
script = ExtResource( 1 )

[node name="Walk" type="Sprite" parent="."]
visible = false
light_mask = 2
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
hframes = 8

[node name="Rest" type="Sprite" parent="."]
light_mask = 2
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
hframes = 8

[node name="JumpFall" type="Sprite" parent="."]
visible = false
light_mask = 2
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="JumpRise" type="Sprite" parent="."]
visible = false
light_mask = 2
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Swim" type="Sprite" parent="."]
visible = false
light_mask = 2
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/JumpFall = SubResource( 1 )
anims/JumpRise = SubResource( 2 )
anims/Rest = SubResource( 3 )
anims/Swim = SubResource( 4 )
anims/Walk = SubResource( 5 )
